added attacks section and images

--- a/dog-blog.html
+++ b/dog-blog.html
@@ -4,8 +4,8 @@
     <title></title>
   </head>
   <body>
-    <h1>Dog Blog</h1>
-    <img src="https://cdn.bulbagarden.net/upload/3/3d/058Growlithe.png">
+    <h1>Dog Blog - Growlithe</h1>
+    <img src="https://cdn.bulbagarden.net/upload/3/3d/058Growlithe.png" alt="Image of Growlithe" width="500" height="500">
     <h2>Favorite Treats</h2>
       <ol>
         <li>Rare candy</li>
@@ -18,6 +18,14 @@
         <li>Breathe fire</li>
         <li>Chase Caterpie</li>
         <li>Play with sticks</li>
+      </ul>
+    <h3>Attacks</h3>
+    <img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-07/25/15/enhanced/buzzfeed-prod-fastlane03/anigif_original-grid-image-7762-1469473247-6.gif" alt="Image of Growlithe's flamethrower attack">
+      <ul>
+        <li>Growl</li>
+        <li>Ember</li>
+        <li>Tackle</li>
+        <li>Flamethrower</li>
       </ul>
   </body>
 </html>
