added inline tags to dog blog

--- a/dog-blog.html
+++ b/dog-blog.html
@@ -4,7 +4,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Dog Blog - Growlithe</h1>
+    <h1>Dog Blog - <em>Growlithe</em></h1>
     <img src="https://cdn.bulbagarden.net/upload/3/3d/058Growlithe.png" alt="Image of Growlithe" width="500" height="500">
     <h2>Favorite Treats</h2>
       <ol>
@@ -16,16 +16,16 @@
     <h2>Favorite Activities</h2>
       <ul>
         <li>Breathe fire</li>
-        <li>Chase Caterpie</li>
+        <li>Chase <em>Caterpie</em></li>
         <li>Play with sticks</li>
       </ul>
-    <h2>Attacks</h3>
+    <h2>Attacks</h2>
     <img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-07/25/15/enhanced/buzzfeed-prod-fastlane03/anigif_original-grid-image-7762-1469473247-6.gif" alt="Image of Growlithe's flamethrower attack">
       <ul>
-        <li>Growl</li>
-        <li>Ember</li>
-        <li>Tackle</li>
-        <li>Flamethrower</li>
+        <li><strong>Growl</strong></li>
+        <li><strong>Ember</strong></li>
+        <li><strong>Tackle</strong></li>
+        <li><strong>Flamethrower</strong></li>
       </ul>
   </body>
 </html>
