--- a/dog-blog.html
+++ b/dog-blog.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Dog Blog</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Dog Blog - <em>Growlithe</em></h1>
