add light and dark buttons with jQuery
Co-authored-by: Kevin Davis <thekidnamedkd@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>Dog Blog</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <h1>Dog Blog - <em>Growlithe</em></h1>
@@ -28,5 +31,9 @@
         <li><strong>Tackle</strong></li>
         <li><strong>Flamethrower</strong></li>
       </ul>
+      <div>
+        <button id="light">Light</button>
+        <button id="dark">Dark</button>
+      </div>
   </body>
 </html>
