add original button that removes light and dark backgrounds
Co-authored-by: Kevin Davis <thekidnamedkd@gmail.com>

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div>
         <button id="light">Light</button>
         <button id="dark">Dark</button>
+        <button id="original">Original</button>
       </div>
   </body>
 </html>
