add highlight and border click feature to paragraph
Co-authored-by: Kevin Davis <thekidnamedkd@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <li>Puppuccino</li>
         <li>Fire stones</li>
       </ol>
-    <p></p>
     <h2>Favorite Activities</h2>
       <ul>
         <li>Breathe fire</li>
@@ -24,6 +23,9 @@
         <li>Play with sticks</li>
       </ul>
     <h2>Attacks</h2>
+    <div id="paradiv">
+      <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta numquam repellat alias doloremque! Reprehenderit porro corrupti doloribus fugit animi ipsum? Laudantium veniam modi neque quam maxime esse quo dolore accusantium.</p>
+    </div>
     <img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-07/25/15/enhanced/buzzfeed-prod-fastlane03/anigif_original-grid-image-7762-1469473247-6.gif" alt="Image of Growlithe's flamethrower attack">
       <ul>
         <li><strong>Growl</strong></li>
